k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tic-tac-toe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tic-tac-toe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tic-tac-toe-service
                port:
                  number: 3031
